--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
