Cria um baseUrl no arquivo tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
@@ -21,8 +25,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "babel.config.js"  ],
+    "**/*.tsx",
+    "babel.config.js"
+  ],
   "exclude": [
     "node_modules"
   ]
